--- a/SQLiteExample/MainPage.xaml
+++ b/SQLiteExample/MainPage.xaml
@@ -7,40 +7,36 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Pivot Title="TimeLog">
-            <PivotItem Header="Tasks">
-                <ListView x:Name="listView1" Margin="0,0,0,50">
-                    <ToggleButton Click="btn_Click"  x:Name="btn_0" Content="Start0" HorizontalAlignment="Right" Margin="0,5,0,5"   Width="310" Height="60"/>
-                    <ToggleButton Click="btn_Click"  x:Name="btn_1" Content="Start1" HorizontalAlignment="Right" Margin="0,5,0,5"  Width="310" Height="60" />
-                    <ToggleButton Click="btn_Click"  x:Name="btn_2" Content="Start2" HorizontalAlignment="Right" Margin="0,5,0,5"  Width="310" Height="60"/>
-                    <ToggleButton Click="btn_Click"  x:Name="btn_3" Content="Start3" HorizontalAlignment="Right" Margin="0,5,0,5"  Width="310" Height="60"/>
-                    <ToggleButton Click="btn_Click"  x:Name="btn_4" Content="Start4" HorizontalAlignment="Right" Margin="0,5,0,5"  Width="310" Height="60"/>
-                    <ToggleButton Click="btn_Click"  x:Name="btn_5" Content="Start5" HorizontalAlignment="Right" Margin="0,5,0,5"  Width="310" Height="60"/>
-                    <ToggleButton Click="btn_Click"  x:Name="btn_6" Content="Start6" HorizontalAlignment="Right" Margin="0,5,0,5"  Width="310" Height="60"/>
-                    <Button  Click="btn_show_Click" x:Name="btn_show" Content="Show All" HorizontalAlignment="Left" Margin="48,0,0,0" VerticalAlignment="Top" Width="140" Height="48" RenderTransformOrigin="0.438,1.194"/>
-                </ListView>
-            </PivotItem>
-            <PivotItem Header="Plan">
-                
-            </PivotItem>
-            <PivotItem Header="History" Margin="14,0,10,0">
-                <Viewbox HorizontalAlignment="Left" Height="150" VerticalAlignment="Top" Width="336"/>
+    <Grid Width="360" Height="640" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="80"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
 
-            </PivotItem>
-            <PivotItem Header="Others">
-                <TextBlock Text="urgent emails go here." />
-            </PivotItem>
-        </Pivot>
+        <Grid Grid.Column="1">
 
+            <ToggleButton Click="btn_Click"  x:Name="btn_0" Content="Start0" HorizontalAlignment="Right" Margin="0,5,0,5"   Width="310" Height="60"/>
+            <ToggleButton Click="btn_Click"  x:Name="btn_1" Content="Start1" HorizontalAlignment="Right" Margin="0,5,0,5"  Width="310" Height="60" />
+            <ToggleButton Click="btn_Click"  x:Name="btn_2" Content="Start2" HorizontalAlignment="Right" Margin="0,5,0,5"  Width="310" Height="60"/>
+            <ToggleButton Click="btn_Click"  x:Name="btn_3" Content="Start3" HorizontalAlignment="Right" Margin="0,5,0,5"  Width="310" Height="60"/>
+            <ToggleButton Click="btn_Click"  x:Name="btn_4" Content="Start4" HorizontalAlignment="Right" Margin="0,5,0,5"  Width="310" Height="60"/>
+            <ToggleButton Click="btn_Click"  x:Name="btn_5" Content="Start5" HorizontalAlignment="Right" Margin="0,5,0,5"  Width="310" Height="60"/>
+            <ToggleButton Click="btn_Click"  x:Name="btn_6" Content="Start6" HorizontalAlignment="Right" Margin="0,5,0,5"  Width="310" Height="60"/>
+            <Button  Click="btn_show_Click" x:Name="btn_show" Content="Show All" HorizontalAlignment="Left" Margin="48,0,0,0" VerticalAlignment="Top" Width="140" Height="48" RenderTransformOrigin="0.438,1.194"/>
 
+        </Grid>
 
-        <CommandBar Height="50"  Background="Transparent" IsOpen="False" VerticalAlignment="Bottom" Grid.Row="2">
-            <AppBarButton Icon="Add" Label="Add"/>
-            <AppBarButton Icon="ReShare" Label="Share"/>
-            <AppBarButton Icon="Edit" Label="Edit" Click="btn_show_Click"/>
-
-        </CommandBar>
+        <Grid Grid.Row="1" Grid.ColumnSpan="2">
+            <CommandBar Height="50"  Background="Transparent" IsOpen="False" VerticalAlignment="Bottom" Grid.Row="2" Opened="CommandBar_Opened">
+                <AppBarButton Icon="Add" Label="Add"/>
+                <AppBarButton Icon="ReShare" Label="Share"/>
+                <AppBarButton Icon="Edit" Label="Edit" Click="btn_show_Click"/>
+            </CommandBar>
+        </Grid>
     </Grid>
 
 
