--- a/SQLiteExample/MainPage.xaml
+++ b/SQLiteExample/MainPage.xaml
@@ -17,7 +17,11 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Column="1">
+        <Grid Name="TimeLineGrid" Grid.Column="0" Grid.Row="0">
+            
+        </Grid>
+        
+        <Grid Name="TaskListGrid" Grid.Column="1" Grid.Row="0">
 
             <ToggleButton Click="btn_Click"  x:Name="btn_0" Content="Start0" HorizontalAlignment="Right" Margin="0,5,0,5"   Width="310" Height="60"/>
             <ToggleButton Click="btn_Click"  x:Name="btn_1" Content="Start1" HorizontalAlignment="Right" Margin="0,5,0,5"  Width="310" Height="60" />
@@ -30,7 +34,7 @@
 
         </Grid>
 
-        <Grid Grid.Row="1" Grid.ColumnSpan="2">
+        <Grid Name="CommandBar" Grid.Row="1" Grid.ColumnSpan="2">
             <CommandBar Height="50"  Background="Transparent" IsOpen="False" VerticalAlignment="Bottom" Grid.Row="2" Opened="CommandBar_Opened">
                 <AppBarButton Icon="Add" Label="Add"/>
                 <AppBarButton Icon="ReShare" Label="Share"/>
