--- a/SQLiteExample/MainPage.xaml
+++ b/SQLiteExample/MainPage.xaml
@@ -8,6 +8,29 @@
     mc:Ignorable="d">
 
     <Grid Width="360" Height="640" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.Resources>
+            <Style
+                TargetType="TextBlock">
+                <Setter
+                    Property="FontSize"
+                    Value="30"></Setter>
+                <Setter
+                    Property="VerticalAlignment"
+                    Value="Center"></Setter>
+            </Style>
+            <Style
+                TargetType="Border">
+                <Setter
+                    Property="BorderBrush"
+                    Value="LightGray"></Setter>
+                <Setter
+                    Property="BorderThickness"
+                    Value="1"></Setter>
+            </Style>
+        </Grid.Resources>
+
+
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="80"/>
             <ColumnDefinition Width="*"/>
@@ -21,7 +44,8 @@
 
         </Grid>
 
-        <Grid Name="TaskListGrid" Grid.Column="1" Grid.Row="0">
+        <Grid Name="TaskListGrid" Grid.Column="1" Grid.Row="0" BorderBrush="Aqua" >
+
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -40,6 +64,11 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
+
+            <!--border-->
+            <Border Grid.Row="0" Grid.ColumnSpan="3" Width="Auto" BorderBrush="LightGray" BorderThickness="1" />
+            <!--border end-->
+
             <Grid Name="Task_0" Grid.Column="0" Grid.Row="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="0.5*"/>
@@ -50,16 +79,17 @@
                     <RowDefinition Height="0.5*"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock x:Name="TaskName_0" Grid.Column="0" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" Text="taskname" FontWeight="Normal"/>
+                <TextBlock x:Name="TaskName_0" Grid.Column="0" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" Text="taskname" FontWeight="Normal" FontSize="20"/>
 
-                <TextBlock x:Name="TaskInfo_0" Grid.Column="1" Grid.Row="0" Margin="0,0,4,0" HorizontalAlignment="Right" VerticalAlignment="Center" Text="1.5h/2h" FontWeight="Normal"/>
+                <TextBlock x:Name="TaskInfo_0" Grid.Column="1" Grid.Row="0" Margin="0,0,4,0" HorizontalAlignment="Right" VerticalAlignment="Center" Text="1.5h/2h" FontWeight="Normal" FontSize="16"/>
 
-                <TextBlock x:Name="TaskTimer_0" Grid.Column="1" Grid.Row="1" Margin="0,0,4,0" HorizontalAlignment="Right" VerticalAlignment="Center" Text="- : -- : --" FontWeight="Normal"/>
+                <TextBlock x:Name="TaskTimer_0" Grid.Column="1" Grid.Row="1" Margin="0,0,4,0" HorizontalAlignment="Right" VerticalAlignment="Center" Text="- : -- : --" FontWeight="Normal" FontSize="18"/>
 
             </Grid>
             <Rectangle Name="Task_0_Color" Grid.Column="1" Grid.Row="0" Fill="Red" Height="70" Width="4"/>
 
             <ToggleButton Click="btn_Click"  x:Name="btn_0" Content="Start0" Grid.Column="2" Grid.Row="0" Height="70" Width=" 70"/>
+            <AppBarSeparator HorizontalAlignment="Left" Margin="98,10,0,0" VerticalAlignment="Top"/>
 
 
         </Grid>
